# BluetoothChatApp

./: main.py  pyproject.toml  requirements.txt
src/: receive.py  search.py  send.py
