[tool.poetry]
name = "bluetoothchatapp"
version = "0.1.0"
description = ""
authors = ["Fu-Te <37261985+T3pp31@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pysimplegui = "^4.60.4"
bleak = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
